2009-10-14  Javier Jardon  <javierjc1982@gmail.com>

	Reviewed by: Jose Dapena Paz  <jdapena@igalia.com>

	* Default behaviour is "automatic", so the NetworkManager is
	compiled only if you have the NetworkManager libraries
	(libnm-glib) in you system.

2009-10-14  Sergio Villar Senin  <svillar@igalia.com>

	* camel/camel-folder-summary.c (message_info_load): added proper
	error checking for summary mmap'ed file
	* camel/providers/imap/camel-imap-folder.c
	(send_done_in_stop_idle): fixes a memory leak in a CamelException

2009-10-02  Sergio Villar Senin  <svillar@igalia.com>

	* camel/providers/pop3/camel-pop3-store.c (wait_for_login_delay):
	fixes a deadlock in camel POP3 code when running
	wait_for_login_delay. We should not disconnect when the service is
	in connecting status

2009-10-01  Sergio Villar Senin  <svillar@igalia.com>

	* camel/providers/smtp/camel-smtp-transport.c (smtp_connect): set
	the reprompt flag when trying to reconnect after an invalid
	authentication attempt. Merged from Camel upstream

2009-09-25  Carl Simonson <simonsonc@gmail.com>

	The *mm helper helper scripts expect enums to be of the following form:

	typedef enum {
	    ...
	} Foo;

	This changeset makes the enums all follow this pattern so that the
	enum.pl script from glibmm can generate defs files properly.

	Note from Philip: please fix the enum.pl script from glibmm, if it
	doesn't support Tinymail's original notation, then it's simply wrong.

2009-09-25  Carl Simonson <simonsonc@gmail.com>

	tny-camel-folder.h includes camel-folder.h when it does not need to.
	Including it causes a problem when it is included in a C++ program.
	camel-folder. This fixes the problem for C++ programs that include
	tny-camel-folder.h. However, renaming variables in camel-folder.h may
	be a good thing to implement, which should be done in the upstream
	camel library.

2009-09-25  Carl Simonson <simonsonc@gmail.com>

	Some public header files are missing G_{BEGIN,END}_DECLS macros which